<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="labs.sdm.millionaires.CreditsActivity"
    android:background="@drawable/game_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/credits_iv_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="false"
                app:layout_constraintBottom_toTopOf="@+id/credits_tv_author_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/avatar" />

            <TextView
                android:id="@+id/credits_tv_author_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:capitalize="none"
                android:fontFamily="sans-serif-condensed"
                android:lineSpacingExtra="8sp"
                android:text="@string/credits_author_description"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:typeface="sans"
                app:layout_constraintBottom_toTopOf="@+id/credits_tv_reason_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/credits_iv_avatar" />

            <TextView
                android:id="@+id/credits_tv_reason_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:capitalize="none"
                android:fontFamily="sans-serif-condensed"
                android:lineSpacingExtra="8sp"
                android:text="@string/credits_reason_description"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:typeface="sans"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/credits_tv_resources_description"
                app:layout_constraintTop_toBottomOf="@+id/credits_tv_author_description" />

            <TextView
                android:id="@+id/credits_tv_resources_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:capitalize="none"
                android:fontFamily="sans-serif-condensed"
                android:lineSpacingExtra="8sp"
                android:text="@string/credits_resources_description"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:typeface="sans"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/credits_tv_reason_description" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

<android.support.v7.widget.Toolbar
    android:id="@+id/credits_toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    app:titleTextColor="@color/white">

</android.support.v7.widget.Toolbar>
</android.support.constraint.ConstraintLayout>
